replace gos with dicts

--- a/_posts/pandas/3d-bubble/3dbubble.ipynb
+++ b/_posts/pandas/3d-bubble/3dbubble.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -30,7 +30,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,20 +50,20 @@
     "    z=df['pop'][750:1500],\n",
     "    text=df['country'][750:1500],\n",
     "    mode='markers',\n",
-    "    marker=Marker(\n",
+    "    marker=dict(\n",
     "        sizemode='diameter',\n",
     "        sizeref=750,\n",
     "        size=df['gdpPercap'][750:1500],\n",
     "        color = df['lifeExp'][750:1500],\n",
     "        colorscale = 'Viridis',\n",
     "        colorbar = dict(title = 'Life<br>Expectancy'),\n",
-    "        line=Line(color='rgb(140, 140, 170)')\n",
+    "        line=dict(color='rgb(140, 140, 170)')\n",
     "    )\n",
     ")\n",
     "\n",
     "data=[trace1]\n",
-    "layout=Layout(height=800, width=800, title='Examining Population and Life Expectancy Over Time')\n",
-    "fig=Figure(data=data, layout=layout)\n",
+    "layout=dict(height=800, width=800, title='Examining Population and Life Expectancy Over Time')\n",
+    "fig=dict(data=data, layout=layout)\n",
     "py.iplot(fig, filename='3DBubble')"
    ]
   },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -129,18 +129,6 @@
       "\n",
       "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
       "\n"
-     ]
-    },
-    {
-     "ename": "IOError",
-     "evalue": "[Errno 2] No such file or directory: '3dbubble.ipynb'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIOError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-0a1bb1fa61cb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'3D Bubble Charts'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mthumbnail\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'/images/3dbubble.png'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlanguage\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'pandas'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     page_type='example_index', has_thumbnail='true', display_as='3d_charts', order=6)\n\u001b[0m",
-      "\u001b[0;32m/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.pyc\u001b[0m in \u001b[0;36mpublish\u001b[0;34m(notebook_name, url_path, page_title, page_description, ignore_last_n_cells, uses_plotly_offline, thumbnail, **kwargs)\u001b[0m\n\u001b[1;32m     74\u001b[0m     \u001b[0mfn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnotebook_name\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m     \u001b[0mtmpfn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'temp-{}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 76\u001b[0;31m     \u001b[0mnbjson\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     77\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;34m'cells'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnbjson\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m         \u001b[0mnbjson\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'cells'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnbjson\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'cells'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mignore_last_n_cells\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIOError\u001b[0m: [Errno 2] No such file or directory: '3dbubble.ipynb'"
      ]
     }
    ],
