--- a/_posts/python/3d-bubble/3dbubble.ipynb
+++ b/_posts/python/3d-bubble/3dbubble.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -34,7 +34,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,20 +54,20 @@
     "    z=df['pop'][750:1500],\n",
     "    text=df['country'][750:1500],\n",
     "    mode='markers',\n",
-    "    marker=Marker(\n",
+    "    marker=dict(\n",
     "        sizemode='diameter',\n",
     "        sizeref=750,\n",
     "        size=df['gdpPercap'][750:1500],\n",
     "        color = df['lifeExp'][750:1500],\n",
     "        colorscale = 'Viridis',\n",
     "        colorbar = dict(title = 'Life<br>Expectancy'),\n",
-    "        line=Line(color='rgb(140, 140, 170)')\n",
+    "        line=dict(color='rgb(140, 140, 170)')\n",
     "    )\n",
     ")\n",
     "\n",
     "data=[trace1]\n",
-    "layout=Layout(height=800, width=800, title='Examining Population and Life Expectancy Over Time')\n",
-    "fig=Figure(data=data, layout=layout)\n",
+    "layout=dict(height=800, width=800, title='Examining Population and Life Expectancy Over Time')\n",
+    "fig=dict(data=data, layout=layout)\n",
     "py.iplot(fig, filename='3DBubble')"
    ]
   },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -101,7 +101,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
     "    z = gravity,\n",
     "    text = planets,\n",
     "    mode = 'markers',\n",
-    "    marker = Marker(\n",
+    "    marker = dict(\n",
     "        sizemode = 'diameter',\n",
     "        sizeref = 750, # info on sizeref: https://plot.ly/python/reference/#scatter-marker-sizeref\n",
     "        size = planet_diameter,\n",
@@ -138,19 +138,19 @@
     "\n",
     "# Style Layout\n",
     "layout=Layout(width=800, height=800, title = 'Planets!',\n",
-    "              scene = Scene(xaxis=XAxis(title='Distance from Sun',\n",
-    "                                        titlefont=dict(color='Orange')),\n",
-    "                            yaxis=YAxis(title='Density',\n",
-    "                                        titlefont=dict(color='rgb(220, 220, 220)')),\n",
-    "                            zaxis=YAxis(title='Gravity',\n",
-    "                                        titlefont=dict(color='rgb(220, 220, 220)')),\n",
+    "              scene = dict(xaxis=dict(title='Distance from Sun',\n",
+    "                                      titlefont=dict(color='Orange')),\n",
+    "                            yaxis=dict(title='Density',\n",
+    "                                       titlefont=dict(color='rgb(220, 220, 220)')),\n",
+    "                            zaxis=dict(title='Gravity',\n",
+    "                                       titlefont=dict(color='rgb(220, 220, 220)')),\n",
     "                            bgcolor = 'rgb(20, 24, 54)'\n",
     "                           )\n",
     "             )\n",
     "\n",
     "# Plot\n",
     "\n",
-    "fig=Figure(data=data, layout=layout)\n",
+    "fig=dict(data=data, layout=layout)\n",
     "py.iplot(fig, filename='solar_system_planet_size')"
    ]
   },
@@ -208,7 +208,7 @@
     "    z = gravity,\n",
     "    text = planets,\n",
     "    mode = 'markers',\n",
-    "    marker = Marker(\n",
+    "    marker = dict(\n",
     "        sizemode = 'diameter',\n",
     "        sizeref = 750, # info on sizeref: https://plot.ly/python/reference/#scatter-marker-sizeref\n",
     "        size = planet_diameter,\n",
@@ -220,20 +220,20 @@
     "data=[trace1]\n",
     "\n",
     "# Style Layout\n",
-    "layout=Layout(width=800, height=800, title = 'Planets!!',\n",
-    "              scene = Scene(xaxis=XAxis(title='Distance from Sun',\n",
-    "                                        titlefont=dict(color='Orange')),\n",
-    "                            yaxis=YAxis(title='Density',\n",
-    "                                        titlefont=dict(color='rgb(220, 220, 220)')),\n",
-    "                            zaxis=YAxis(title='Gravity',\n",
-    "                                        titlefont=dict(color='rgb(220, 220, 220)')),\n",
+    "layout=dict(width=800, height=800, title = 'Planets!!',\n",
+    "            scene = dict(xaxis=dict(title='Distance from Sun',\n",
+    "                                    titlefont=dict(color='Orange')),\n",
+    "                            yaxis=dict(title='Density',\n",
+    "                                       titlefont=dict(color='rgb(220, 220, 220)')),\n",
+    "                            zaxis=dict(title='Gravity',\n",
+    "                                       titlefont=dict(color='rgb(220, 220, 220)')),\n",
     "                            bgcolor = 'rgb(20, 24, 54)'\n",
     "                           )\n",
     "             )\n",
     "\n",
     "# Plot\n",
     "\n",
-    "fig=Figure(data=data, layout=layout)\n",
+    "fig=dict(data=data, layout=layout)\n",
     "py.iplot(fig, filename='solar_system_planet_temp')"
    ]
   },
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -289,6 +289,16 @@
       "\u001b[33mYou are using pip version 7.1.0, however version 7.1.2 is available.\n",
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
       "Requirement already up-to-date: publisher in /Users/Chelsea/venv2.7/lib/python2.7/site-packages\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
+      "\n",
+      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "\n"
      ]
     }
    ],
