--- a/_posts/python/line-plots/lines.ipynb
+++ b/_posts/python/line-plots/lines.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -28,7 +28,7 @@
        "'1.8.8'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -61,7 +61,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -114,7 +114,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -188,7 +188,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
     "    x = month,\n",
     "    y = high_2014,\n",
     "    name = 'High 2014',\n",
-    "    line = go.Line(\n",
+    "    line = dict(\n",
     "        color = ('rgb(205, 12, 24)'),\n",
     "        width = 4)\n",
     ")\n",
@@ -220,7 +220,7 @@
     "    x = month,\n",
     "    y = low_2014,\n",
     "    name = 'Low 2014',\n",
-    "    line = go.Line(\n",
+    "    line = dict(\n",
     "        color = ('rgb(22, 96, 167)'),\n",
     "        width = 4,)\n",
     ")\n",
@@ -228,7 +228,7 @@
     "    x = month,\n",
     "    y = high_2007,\n",
     "    name = 'High 2007',\n",
-    "    line = go.Line(\n",
+    "    line = dict(\n",
     "        color = ('rgb(205, 12, 24)'),\n",
     "        width = 4,\n",
     "        dash = 'dash') # dash options include 'dash', 'dot', and 'dashdot'\n",
@@ -237,7 +237,7 @@
     "    x = month,\n",
     "    y = low_2007,\n",
     "    name = 'Low 2007',\n",
-    "    line = go.Line(\n",
+    "    line = dict(\n",
     "        color = ('rgb(22, 96, 167)'),\n",
     "        width = 4,\n",
     "        dash = 'dash')\n",
@@ -246,7 +246,7 @@
     "    x = month,\n",
     "    y = high_2000,\n",
     "    name = 'High 2000',\n",
-    "    line = go.Line(\n",
+    "    line = dict(\n",
     "        color = ('rgb(205, 12, 24)'),\n",
     "        width = 4,\n",
     "        dash = 'dot')\n",
@@ -255,7 +255,7 @@
     "    x = month,\n",
     "    y = low_2000,\n",
     "    name = 'Low 2000',\n",
-    "    line = go.Line(\n",
+    "    line = dict(\n",
     "        color = ('rgb(22, 96, 167)'),\n",
     "        width = 4,\n",
     "        dash = 'dot')\n",
@@ -263,15 +263,13 @@
     "data = [trace0, trace1, trace2, trace3, trace4, trace5]\n",
     "\n",
     "# Edit the layout\n",
-    "layout = go.Layout(title = 'Average High and Low Temperatures in New York',\n",
-    "                   xaxis = go.XAxis(\n",
-    "                       title = 'Temperature (degrees F)'),\n",
-    "                   yaxis = go.YAxis(\n",
-    "                       title = 'Month'),\n",
-    "               )\n",
+    "layout = dict(title = 'Average High and Low Temperatures in New York',\n",
+    "              xaxis = dict(title = 'Temperature (degrees F)'),\n",
+    "              yaxis = dict(title = 'Month'),\n",
+    "              )\n",
     "\n",
     "# Plot and embed in ipython notebook!\n",
-    "fig = go.Figure(data=data, layout=layout)\n",
+    "fig = dict(data=data, layout=layout)\n",
     "py.iplot(fig, filename='styled-line')\n"
    ]
   },
@@ -284,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -298,7 +296,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +327,7 @@
     "\n",
     "data = [trace1, trace2]\n",
     "\n",
-    "fig = go.Figure(data=data)\n",
+    "fig = dict(data=data)\n",
     "py.iplot(fig, filename='simple-connectgaps')"
    ]
   },
@@ -342,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -356,7 +354,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +369,7 @@
     "    mode='lines+markers',\n",
     "    name=\"'linear'\",\n",
     "    hoverinfo='name',\n",
-    "    line=go.Line(\n",
+    "    line=dict(\n",
     "        shape='linear'\n",
     "    )\n",
     ")\n",
@@ -382,7 +380,7 @@
     "    name=\"'spline'\",\n",
     "    text=[\"tweak line smoothness<br>with 'smoothing' in line object\"],\n",
     "    hoverinfo='text+name',\n",
-    "    line=go.Line(\n",
+    "    line=dict(\n",
     "        shape='spline'\n",
     "    )\n",
     ")\n",
@@ -392,7 +390,7 @@
     "    mode='lines+markers',\n",
     "    name=\"'vhv'\",\n",
     "    hoverinfo='name',\n",
-    "    line=go.Line(\n",
+    "    line=dict(\n",
     "        shape='vhv'\n",
     "    )\n",
     ")\n",
@@ -402,7 +400,7 @@
     "    mode='lines+markers',\n",
     "    name=\"'hvh'\",\n",
     "    hoverinfo='name',\n",
-    "    line=go.Line(\n",
+    "    line=dict(\n",
     "        shape='hvh'\n",
     "    )\n",
     ")\n",
@@ -412,7 +410,7 @@
     "    mode='lines+markers',\n",
     "    name=\"'vh'\",\n",
     "    hoverinfo='name',\n",
-    "    line=go.Line(\n",
+    "    line=dict(\n",
     "        shape='vh'\n",
     "    )\n",
     ")\n",
@@ -422,21 +420,21 @@
     "    mode='lines+markers',\n",
     "    name=\"'hv'\",\n",
     "    hoverinfo='name',\n",
-    "    line=go.Line(\n",
+    "    line=dict(\n",
     "        shape='hv'\n",
     "    )\n",
     ")\n",
     "data = [trace1, trace2, trace3, trace4, trace5, trace6]\n",
-    "layout = go.Layout(\n",
-    "    legend=go.Legend(\n",
+    "layout = dict(\n",
+    "    legend=dict(\n",
     "        y=0.5,\n",
     "        traceorder='reversed',\n",
-    "        font=go.Font(\n",
+    "        font=dict(\n",
     "            size=16\n",
     "        )\n",
     "    )\n",
     ")\n",
-    "fig = go.Figure(data=data, layout=layout)\n",
+    "fig = dict(data=data, layout=layout)\n",
     "py.iplot(fig, filename='line-shapes')"
    ]
   },
@@ -449,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -463,7 +461,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -647,16 +645,6 @@
       "\u001b[33mYou are using pip version 7.1.0, however version 7.1.2 is available.\n",
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
       "Requirement already up-to-date: publisher in /Users/Chelsea/venv2.7/lib/python2.7/site-packages\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
-      "\n",
-      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "\n"
      ]
     }
    ],
