edit webgl examples

--- a/_posts/python/WebGL/webgl.ipynb
+++ b/_posts/python/WebGL/webgl.ipynb
@@ -39,26 +39,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/plotly/plotly/plotly.py:231: UserWarning:\n",
-      "\n",
-      "Woah there! Look at all those points! Due to browser limitations, Plotly has a hard time graphing more than 500k data points for line charts, or 40k points for other types of charts. Here are some suggestions:\n",
-      "(1) Trying using the image API to return an image instead of a graph URL\n",
-      "(2) Use matplotlib\n",
-      "(3) See if you can create your visualization with fewer data points\n",
-      "\n",
-      "If the visualization you're using aggregates points (e.g., box plot, histogram, etc.) you can disregard this warning.\n",
-      "\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -68,7 +53,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,13 +66,13 @@
     "\n",
     "N = 100000\n",
     "trace = go.Scattergl(\n",
-    "    x = np.linspace(-1, 1, N),\n",
+    "    x = np.random.randn(N),\n",
     "    y = np.random.randn(N),\n",
     "    mode = 'markers',\n",
     "    marker = dict(\n",
-    "        line=dict(\n",
-    "            width=1, \n",
-    "            color='#2F4F4F')\n",
+    "        line = dict(\n",
+    "            width = 1, \n",
+    "            color = '#404040')\n",
     "    )\n",
     ")\n",
     "data = [trace]\n",
@@ -103,30 +88,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/plotly/plotly/plotly.py:231: UserWarning:\n",
-      "\n",
-      "Woah there! Look at all those points! Due to browser limitations, Plotly has a hard time graphing more than 500k data points for line charts, or 40k points for other types of charts. Here are some suggestions:\n",
-      "(1) Trying using the image API to return an image instead of a graph URL\n",
-      "(2) Use matplotlib\n",
-      "(3) See if you can create your visualization with fewer data points\n",
-      "\n",
-      "If the visualization you're using aggregates points (e.g., box plot, histogram, etc.) you can disregard this warning.\n",
-      "\n",
-      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/plotly/plotly/plotly.py:1411: UserWarning:\n",
-      "\n",
-      "Estimated Draw Time Too Long\n",
-      "\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -143,7 +109,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,13 +122,13 @@
     "\n",
     "N = 100000\n",
     "trace = go.Scatter(\n",
-    "    x = np.linspace(-1, 1, N),\n",
+    "    x = np.random.randn(N),\n",
     "    y = np.random.randn(N),\n",
     "    mode = 'markers',\n",
     "    marker = dict(\n",
-    "        line=dict(\n",
-    "            width=1, \n",
-    "            color='#2F4F4F')\n",
+    "        line = dict(\n",
+    "            width = 1,\n",
+    "            color = '#404040')\n",
     "    )\n",
     ")\n",
     "data = [trace]\n",
@@ -178,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -192,7 +158,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,16 +171,16 @@
     "\n",
     "N = 1000000\n",
     "trace = go.Scattergl(\n",
-    "    x = np.linspace(-1, 1, N),\n",
+    "    x = np.random.randn(N),\n",
     "    y = np.random.randn(N),\n",
     "    mode = 'markers',\n",
     "    marker = dict(\n",
-    "        line=dict(\n",
-    "            width=1, \n",
-    "            color='#2F4F4F')\n",
+    "        color = 'rgb(152, 0, 0)',\n",
+    "        line = dict(\n",
+    "            width = 1,\n",
+    "            color = 'rgb(0,0,0)')\n",
     "    )\n",
     ")\n",
-    "\n",
     "data = [trace]\n",
     "py.iplot(data, filename='WebGLmillion')"
    ]
@@ -331,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
