--- a/_posts/python/dendrogram/dendrograms.ipynb
+++ b/_posts/python/dendrogram/dendrograms.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -135,7 +135,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,9 +181,7 @@
     "    Heatmap(\n",
     "        x = dendro_leaves, \n",
     "        y = dendro_leaves,\n",
-    "        z = heat_data,\n",
-    "        xaxis = 'x',\n",
-    "        yaxis = 'y',    \n",
+    "        z = heat_data,    \n",
     "        colorscale = 'YIGnBu'\n",
     "    )\n",
     "])\n",
@@ -200,24 +198,69 @@
     "                         })\n",
     "# Edit xaxis\n",
     "figure['layout']['xaxis'].update({'domain': [.15, 1],\n",
-    "                                  'mirror': False})\n",
+    "                                  'mirror': False,\n",
+    "                                  'showgrid': False,\n",
+    "                                  'showline': False,\n",
+    "                                  'zeroline': False,\n",
+    "                                  'ticks':\"\"})\n",
     "# Edit xaxis2\n",
-    "figure['layout'].update({'xaxis2': dendro_side['layout']['xaxis']})\n",
-    "figure['layout']['xaxis2'].update({'domain': [0, .15],\n",
-    "                                   'mirror': False})\n",
+    "figure['layout'].update({'xaxis2': {'domain': [0, .15],\n",
+    "                                   'mirror': False,\n",
+    "                                   'showgrid': False,\n",
+    "                                   'showline': False,\n",
+    "                                   'zeroline': False,\n",
+    "                                   'showticklabels': False,\n",
+    "                                   'ticks':\"\"}})\n",
+    "\n",
     "# Edit yaxis\n",
     "figure['layout']['yaxis'].update({'domain': [0, .85],\n",
+    "                                  'mirror': False,\n",
+    "                                  'showgrid': False,\n",
     "                                  'showline': False,\n",
-    "                                  'ticks': \"\",\n",
-    "                                  'mirror': False})\n",
+    "                                  'zeroline': False,\n",
+    "                                  'showticklabels': False,\n",
+    "                                  'ticks': \"\"})\n",
     "# Edit yaxis2\n",
-    "figure['layout'].update({'yaxis2': dendro_side['layout']['yaxis']})\n",
-    "figure['layout']['yaxis2'].update({'domain':[.825, .975],\n",
+    "figure['layout'].update({'yaxis2':{'domain':[.825, .975],\n",
     "                                   'mirror': False,\n",
-    "                                   'tickvals': \"\"})\n",
+    "                                   'showgrid': False,\n",
+    "                                   'showline': False,\n",
+    "                                   'zeroline': False,\n",
+    "                                   'showticklabels': False,\n",
+    "                                   'ticks':\"\"}})\n",
     "\n",
     "# Plot!\n",
     "py.iplot(figure, filename='dendrogram_with_heatmap')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'domain': [0, 0.15],\n",
+       " 'mirror': False,\n",
+       " 'rangemode': 'tozero',\n",
+       " 'showgrid': False,\n",
+       " 'showline': True,\n",
+       " 'showticklabels': True,\n",
+       " 'ticks': 'outside',\n",
+       " 'type': 'linear',\n",
+       " 'zeroline': False}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dendro_side['layout']['xaxis']"
    ]
   },
   {
@@ -280,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -343,7 +386,7 @@
     "    'Three examples of dendrograms.',\n",
     "    name = 'Dendrograms',\n",
     "    thumbnail='/images/dendrogram.png', language='python',\n",
-    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=33)"
+    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=31)"
    ]
   },
   {
