edit treemap order number

--- a/_posts/python/treemap/treemap.ipynb
+++ b/_posts/python/treemap/treemap.ipynb
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -194,10 +194,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
-      "\n",
-      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "\n"
+      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
      ]
     }
    ],
@@ -215,7 +213,7 @@
     "    'An examples of a treemap in Plotly using Squarify.',\n",
     "    title = 'Python Treemaps | plotly',\n",
     "    thumbnail='/images/treemap.png', language='python',\n",
-    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=33)"
+    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=30)"
    ]
   },
   {
