remove struggling svg graphs

--- a/_posts/python/WebGL/webgl.ipynb
+++ b/_posts/python/WebGL/webgl.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now in Ploty you can implement WebGL with `Scattergl()` in place of Scatter() <br>\n",
+    "Now in Ploty you can implement WebGL with `Scattergl()` in place of `Scatter()` <br>\n",
     "for increased speed, improved interactivity, and the ability to plot even more data!"
    ]
   },
@@ -77,62 +77,6 @@
     ")\n",
     "data = [trace]\n",
     "py.iplot(data, filename='WebGL100000')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#####SVG"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The draw time for this plot will be slow for all clients.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/8827.embed\" height=\"525px\" width=\"100%\"></iframe>"
-      ],
-      "text/plain": [
-       "<plotly.tools.PlotlyDisplay object>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import plotly.plotly as py\n",
-    "import plotly.graph_objs as go\n",
-    "\n",
-    "import numpy as np\n",
-    "\n",
-    "N = 100000\n",
-    "trace = go.Scatter(\n",
-    "    x = np.random.randn(N),\n",
-    "    y = np.random.randn(N),\n",
-    "    mode = 'markers',\n",
-    "    marker = dict(\n",
-    "        line = dict(\n",
-    "            width = 1,\n",
-    "            color = '#404040')\n",
-    "    )\n",
-    ")\n",
-    "data = [trace]\n",
-    "py.iplot(data, filename='SVG100000')"
    ]
   },
   {
@@ -244,71 +188,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#####SVG"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The draw time for this plot will be slow for all clients.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/plotly/plotly/plotly.py:1411: UserWarning:\n",
-      "\n",
-      "Estimated Draw Time Too Long\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/8852.embed\" height=\"525px\" width=\"100%\"></iframe>"
-      ],
-      "text/plain": [
-       "<plotly.tools.PlotlyDisplay object>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import plotly.plotly as py\n",
-    "import plotly.graph_objs as go\n",
-    "\n",
-    "import numpy as np\n",
-    "\n",
-    "data = []\n",
-    "trace_num = 30\n",
-    "point_num = trace_num*100\n",
-    "for i in range(trace_num):\n",
-    "    data.append(go.Scatter(\n",
-    "        x = np.linspace(0, 1, point_num),\n",
-    "        y = np.random.randn(point_num)+(i*5)\n",
-    "    )\n",
-    ")\n",
-    "layout = dict(showlegend=False, hovermode='closest')\n",
-    "fig=dict(data=data, layout=layout)\n",
-    "py.iplot(fig, filename='SVG_line')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "###Reference"
    ]
   },
@@ -321,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -357,16 +236,6 @@
       "\u001b[33mYou are using pip version 7.1.0, however version 7.1.2 is available.\n",
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
       "Requirement already up-to-date: publisher in /Users/Chelsea/venv2.7/lib/python2.7/site-packages\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
-      "\n",
-      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "\n"
      ]
     }
    ],
