--- a/_posts/python/WebGL/webgl.ipynb
+++ b/_posts/python/WebGL/webgl.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -237,6 +237,14 @@
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
       "Requirement already up-to-date: publisher in /Users/Chelsea/venv2.7/lib/python2.7/site-packages\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
+     ]
     }
    ],
    "source": [
@@ -253,7 +261,7 @@
     "    'Examples comparing WebGL scatter charts to SVG scatter charts in Python with Plotly.',\n",
     "    name = 'WebGL vs SVG',\n",
     "    thumbnail='/images/webgl.png', language='python',\n",
-    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=2)"
+    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=3)"
    ]
   },
   {
