--- a/_posts/python/dendrogram/dendrograms.ipynb
+++ b/_posts/python/dendrogram/dendrograms.ipynb
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -365,10 +365,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
-      "\n",
-      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "\n"
+      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
      ]
     }
    ],
@@ -386,7 +384,7 @@
     "    'Three examples of dendrograms.',\n",
     "    name = 'Dendrograms',\n",
     "    thumbnail='/images/dendrogram.png', language='python',\n",
-    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=31)"
+    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=29)"
    ]
   },
   {
