--- a/_posts/python/line-plots/lines.ipynb
+++ b/_posts/python/line-plots/lines.ipynb
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -646,6 +646,14 @@
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
       "Requirement already up-to-date: publisher in /Users/Chelsea/venv2.7/lib/python2.7/site-packages\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
+     ]
     }
    ],
    "source": [
@@ -662,7 +670,7 @@
     "    'Examples on creating and styling line charts in Python with Plotly.',\n",
     "    name = 'Line Charts',\n",
     "    thumbnail='/images/line-plots.png', language='python',\n",
-    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=1)"
+    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=2)"
    ]
   },
   {
