--- a/_posts/python/network/networkx.ipynb
+++ b/_posts/python/network/networkx.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -225,10 +225,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
-      "\n",
-      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "\n"
+      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
      ]
     }
    ],
@@ -244,9 +242,9 @@
     "    'networkx.ipynb', 'python/network-graphs', 'Network Graphs',\n",
     "    'How to make Network Graphs in Python with Plotly. '\n",
     "    'One examples of a network graph with NetworkX',\n",
-    "    title = 'Python Network Graphs | plotly',\n",
+    "    name = 'Python Network Graphs | plotly',\n",
     "    thumbnail='/images/net.png', language='python',\n",
-    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=32) "
+    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=30) "
    ]
   },
   {
