--- a/_posts/python/treemap/treemap.ipynb
+++ b/_posts/python/treemap/treemap.ipynb
@@ -211,9 +211,9 @@
     "    'treemap.ipynb', 'python/treemaps', 'Treemaps',\n",
     "    'How to make interactive treemap in Python with Plotly and Squarify. '\n",
     "    'An examples of a treemap in Plotly using Squarify.',\n",
-    "    title = 'Python Treemaps | plotly',\n",
+    "    name = 'Python Treemaps | plotly',\n",
     "    thumbnail='/images/treemap.png', language='python',\n",
-    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=30)"
+    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=28)"
    ]
   },
   {
