--- a/_posts/python/finance/ohlc-charts.ipynb
+++ b/_posts/python/finance/ohlc-charts.ipynb
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -420,19 +420,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mYou are using pip version 7.0.3, however version 7.1.0 is available.\n",
+      "\u001b[33mYou are using pip version 7.1.0, however version 7.1.2 is available.\n",
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
-      "Requirement already up-to-date: publisher in /Users/Chelsea/anaconda/lib/python2.7/site-packages\n"
+      "Requirement already up-to-date: publisher in /Users/Chelsea/venv2.7/lib/python2.7/site-packages\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Chelsea/anaconda/lib/python2.7/site-packages/publisher/publisher.py:50: UserWarning:\n",
-      "\n",
-      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "\n"
+      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
      ]
     }
    ],
@@ -448,9 +446,9 @@
     "    'ohlc-charts.ipynb', 'python/ohlc-charts', 'OHLC Charts',\n",
     "    'How to make interactive OHLC charts in Python with Plotly. '\n",
     "    'Six examples of OHLC charts with Pandas, time series, and yahoo finance data.',\n",
-    "    title = 'Python OHLC Charts | plotly',\n",
+    "    name = 'Python OHLC Charts | plotly',\n",
     "    thumbnail='/images/ohlc.png', language='python',\n",
-    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=27)    "
+    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=25)    "
    ]
   },
   {
@@ -479,7 +477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
