edit name in notebooks

--- a/_posts/python/distplot/distplots.ipynb
+++ b/_posts/python/distplot/distplots.ipynb
@@ -640,10 +640,10 @@
     "! pip install publisher --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    'distplots.ipynb', 'python/distplot', 'Distplots',\n",
+    "    'distplots.ipynb', 'python/distplot', 'Python Distplots | plotly',\n",
     "    'How to make interactive Distplots in Python with Plotly. '\n",
     "    'Eight examples of Distplots with Python and Plotly.',\n",
-    "    name = 'Python Distplots | plotly',\n",
+    "    name = 'Distplots',\n",
     "    thumbnail='/images/distplot.png', language='python',\n",
     "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=24)  "
    ]
