--- a/_posts/python/finance/ohlc-charts.ipynb
+++ b/_posts/python/finance/ohlc-charts.ipynb
@@ -443,10 +443,10 @@
     "! pip install publisher --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    'ohlc-charts.ipynb', 'python/ohlc-charts', 'OHLC Charts',\n",
+    "    'ohlc-charts.ipynb', 'python/ohlc-charts', 'Python OHLC Charts | plotly',\n",
     "    'How to make interactive OHLC charts in Python with Plotly. '\n",
     "    'Six examples of OHLC charts with Pandas, time series, and yahoo finance data.',\n",
-    "    name = 'Python OHLC Charts | plotly',\n",
+    "    name = 'OHLC Charts',\n",
     "    thumbnail='/images/ohlc.png', language='python',\n",
     "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=25)    "
    ]
