--- a/_posts/python/network/networkx.ipynb
+++ b/_posts/python/network/networkx.ipynb
@@ -239,10 +239,10 @@
     "! pip install publisher --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    'networkx.ipynb', 'python/network-graphs', 'Network Graphs',\n",
+    "    'networkx.ipynb', 'python/network-graphs', 'Python Network Graphs | plotly',\n",
     "    'How to make Network Graphs in Python with Plotly. '\n",
     "    'One examples of a network graph with NetworkX',\n",
-    "    name = 'Python Network Graphs | plotly',\n",
+    "    name = 'Network Graphs',\n",
     "    thumbnail='/images/net.png', language='python',\n",
     "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=30) "
    ]
