--- a/_posts/python/treemap/treemap.ipynb
+++ b/_posts/python/treemap/treemap.ipynb
@@ -208,10 +208,10 @@
     "! pip install publisher --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    'treemap.ipynb', 'python/treemaps', 'Treemaps',\n",
+    "    'treemap.ipynb', 'python/treemaps', 'Python Treemaps | plotly',\n",
     "    'How to make interactive treemap in Python with Plotly and Squarify. '\n",
     "    'An examples of a treemap in Plotly using Squarify.',\n",
-    "    name = 'Python Treemaps | plotly',\n",
+    "    name = 'Treemaps',\n",
     "    thumbnail='/images/treemap.png', language='python',\n",
     "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=28)"
    ]
