update scatter doc

--- a/_posts/python/line_and_scatter/scatter.ipynb
+++ b/_posts/python/line_and_scatter/scatter.ipynb
@@ -570,6 +570,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "####Large Data Sets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now in Ploty you can implement WebGL with `Scattergl()` in place of `Scatter()` <br>\n",
+    "for increased speed, improved interactivity, and the ability to plot even more data!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/9028.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import plotly.plotly as py\n",
+    "import plotly.graph_objs as go\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "N = 100000\n",
+    "trace = go.Scattergl(\n",
+    "    x = np.random.randn(N),\n",
+    "    y = np.random.randn(N),\n",
+    "    mode = 'markers',\n",
+    "    marker = dict(\n",
+    "        color = 'FFBAD2',\n",
+    "        line = dict(width = 1)\n",
+    "    )\n",
+    ")\n",
+    "data = [trace]\n",
+    "py.iplot(data, filename='compare_webgl')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "###Reference"
    ]
   },
@@ -582,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -624,8 +680,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
+      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
+      "\n",
+      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "\n"
      ]
     }
    ],
